# sim-league-platform

./: .coverage  .env.example  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-project-structure.md  README.MD
migrations/: env.py
migrations/versions/: 20260428_0827_cfcf39d204d1_create_raw_events_table.py
src/sim_league_platform/: __init__.py  config.py
src/sim_league_platform/adapters/postgres/: tables.py
src/sim_league_platform/domain/: events.py
tests/: test_smoke.py
tests/unit/: test_events.py
