[project]
name = "sim-league-platform"
version = "0.1.0"
description = "Production ETL and analytics platform for The Sim League"
readme = "README.md"
authors = [
    { name = "corbinc1998", email = "corbincurnutt1998@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sim-league-platform = "sim_league_platform:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear (likely bugs)
    "UP",   # pyupgrade (modern syntax)
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=sim_league_platform --cov-report=term-missing"